sm8450-common: overlay: Enable double tap to ambient

--- a/overlay/SettingsResXiaomi/res/values/lineage_config.xml
+++ b/overlay/SettingsResXiaomi/res/values/lineage_config.xml
@@ -22,4 +22,7 @@
 
     <!-- Whether to show min refresh rate in display settings -->
     <bool name="config_show_min_refresh_rate_switch">true</bool>
+
+    <!-- Whether to show double tap ambient settings -->
+    <bool name="config_supports_double_tap_ambient" translatable="false">true</bool>
 </resources>
