--- a/overlay/SettingsResXiaomi/res/values/lineage_config.xml
+++ b/overlay/SettingsResXiaomi/res/values/lineage_config.xml
@@ -28,4 +28,11 @@
 
     <!-- Whether to show volume steps settings -->
     <bool name="config_supports_volume_steps" translatable="false">true</bool>
+
+    <!-- Enable Night display, which requires HWC 2.0. -->
+    <bool name="config_nightDisplayAvailable">true</bool>
+
+    <!-- Boolean indicating whether the HWC setColorTransform function can be performed efficiently
+    in hardware. -->
+    <bool name="config_setColorTransformAccelerated">true</bool>
 </resources>
